blockml/test/errors/11_report/e97/e97_one.view
view: e97_one
table: 1
fields:
- dimension: dim1
  sql: 111
